Render deployment setup

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,3 +84,4 @@ production:
   database: freenote_production
   username: freenote
   password: <%= ENV["FREENOTE_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
